--- a/view/atp-admin/shared/admin_menu.phtml
+++ b/view/atp-admin/shared/admin_menu.phtml
@@ -1,5 +1,5 @@
 <div id="admin-header">
-	<h1><a href="<?=$this->basePath() . "/admin"?>">##Admin Title##</a></h1>
+	<h1><a href="<?=$this->basePath() . "/admin"?>"><?=$this->siteParam('Admin Title')?></a></h1>
 	<a id="logout-link" href="<?=$this->basePath() . "/admin/logout"?>">Logout</a>
 	<span id="id-span">Hi ##Current User##!</span>
 	<ul id="admin-menu">
