--- a/view/atp-admin/index/edit.phtml
+++ b/view/atp-admin/index/edit.phtml
@@ -33,9 +33,10 @@
 				
 				<div class="owner-field-list">
 					<?php foreach($object->ownerFields() as $column => $table) { $columnUnderscore = \ATP\Inflector::underscore($column); ?>
-						<label class="<?=$columnUnderscore?>" for="<?=$columnUnderscore?>"><?=$column?></label>
-						<?=$this->partial('form/model_select.phtml', array('column' => $column, 'obj' => $this->object->$column))?>
-						<a href="<?=$this->basePath() . "/admin/edit/{$columnUnderscore}/{$this->object->$column->id}"?>">Edit <?=$column?></a>
+						<?=$this->formModelSelect(array('label' => $column, 'name' => "{$columnUnderscore}_id", 'className' => get_class($object->$column), 'value' =>$object->$column->id))?>
+						<?php if($object->$column->id) { ?>
+							<!--<a href="<?=$this->basePath() . "/admin/edit/{$columnUnderscore}/{$object->$column->id}"?>">Edit <?=$column?></a>-->
+						<?php } ?>
 					<?php } ?>
 				</div>
 				
@@ -55,8 +56,8 @@
 			<div id="<?=$plural?>-tab">
 				<div class="admin-edit">
 					<?php $field = lcfirst($singular) . 'List'?>
-					<?=$this->partial('admin/model_list.phtml', array('objects' => $object->{$field}, 'delete' => false))?>
-					Add <?=$singular?> <?=$this->partial('form/model_select.phtml', array('column' => "new_{$singular}", 'obj' => $object->{$field}->temp()))?>
+					<?php /*<?=$this->partial('admin/model_list.phtml', array('objects' => $object->{$field}, 'delete' => false))?> */ ?>
+					<?php /*Add <?=$singular?> <?=$this->partial('form/model_select.phtml', array('column' => "new_{$singular}", 'obj' => $object->{$field}->temp()))?> */?>
 				</div>
 			</div>
 		<?php } ?>
@@ -65,8 +66,8 @@
 			<div id="<?=$plural?>-tab">
 				<div class="admin-edit">
 					<?php $field = lcfirst($singular) . 'List'?>
-					<?=$this->partial('admin/model_list.phtml', array('objects' => $object->{$field}, 'delete' => false))?>
-					Add <?=$singular?> <?=$this->partial('form/model_select.phtml', array('column' => "blah", 'obj' => $object->{$field}->temp()))?>
+					<?php /* <?=$this->partial('admin/model_list.phtml', array('objects' => $object->{$field}, 'delete' => false))?> */ ?>
+					<?php /*Add <?=$singular?> <?=$this->partial('form/model_select.phtml', array('column' => "blah", 'obj' => $object->{$field}->temp()))?>*/ ?>
 				</div>
 			</div>
 		<?php } ?>
