--- a/view/atp-admin/layout/admin.phtml
+++ b/view/atp-admin/layout/admin.phtml
@@ -4,17 +4,18 @@
 
 <head>
 	<?=$this->headTitle($this->siteParam("Admin Title"))->setSeparator(" | ")?>
-	<?=$this->headLink()
-		->appendStylesheet($this->basePath() . "/atp-admin/css/admin.css")
-		->appendStylesheet($this->basePath() . "/atp-core/css/redmond/jquery-ui-1.10.3.custom.min.css")
+	<?php $this->appendCss("/atp-admin/css/admin.less")
+		->appendCss("/atp-core/css/redmond/jquery-ui-1.10.3.custom.min.css")
 	?>
-	<?=$this->headScript()
-		->prependFile($this->basePath() . "/atp-admin/js/admin.js")
-		->prependFile($this->basePath() . "/atp-core/js/tiny_mce/jquery.tinymce.js")
-		->prependFile($this->basePath() . "/atp-core/js/tiny_mce/tiny_mce.js")
-		->prependFile($this->basePath() . "/atp-core/js/jquery-ui-1.10.3.custom.min.js")
-		->prependFile($this->basePath() . "/atp-core/js/jquery-1.10.2.min.js")
+	<?=$this->headLink()?>
+	
+	<?php $this->prependJs("/atp-admin/js/admin.js")
+		->prependJs("/atp-core/js/tiny_mce/jquery.tinymce.js")
+		->prependJs("/atp-core/js/tiny_mce/tiny_mce.js")
+		->prependJs("/atp-core/js/jquery-ui-1.10.3.custom.min.js")
+		->prependJs("/atp-core/js/jquery-1.10.2.min.js")
 	?>
+	<?=$this->headScript()?>
 </head>
 
 <body>
