--- a/public/atp-admin/css/admin.less
+++ b/public/atp-admin/css/admin.less
@@ -32,6 +32,7 @@ div#admin-tabs {
 }
 table.admin-model-list {
 	thead td{text-align: center; font-weight: bold;}
+	tr:nth-child(even) {background: @bg;}
 }
 div#dialog-confirm {font-size: small; display: none;}
 
@@ -50,6 +51,7 @@ td.button-cell {width: 75px;}
 	div.model-input {width: 80%;}
 	textarea, span.mceEditor {display: block; float: left; height: 20em; width: 78%;}
 	span.mceEditor {margin-bottom: 40px;}
+	textarea {margin-bottom: 32px;}
 	.model-save {margin-top: 30px; width: 200px; clear: both;}
 }
 .admin-return {clear: both; text-align: center;}
