--- a/view/atp-admin/layout/admin.phtml
+++ b/view/atp-admin/layout/admin.phtml
@@ -4,8 +4,8 @@
 
 <head>
 	<?=$this->headTitle($this->siteParam("Admin Title"))->setSeparator(" | ")?>
-	<?php $this->appendCss("/atp-admin/css/admin.less")
-		->appendCss("/atp-core/css/redmond/jquery-ui-1.10.3.custom.min.css")
+	<?php $this
+		->appendCss("/atp-admin/css/admin.less")
 	?>
 	<?=$this->headLink()?>
 	
