--- a/view/atp-admin/index/edit.phtml
+++ b/view/atp-admin/index/edit.phtml
@@ -1,8 +1,8 @@
 <h2>
 	<?php if($object->id) { ?>
-		Edit <?=\ATP\Inflector::titleize($model)?> - <?=$object->displayName()?>
+		Edit <?=$modelData['displayName']?> - <?=$object->displayName()?>
 	<?php } else { ?>
-		Create New <?=\ATP\Inflector::titleize($model)?>
+		Create New <?=$modelData['displayName']?>
 	<?php } ?>
 </h2>
 
