--- a/view/atp-admin/index/list.phtml
+++ b/view/atp-admin/index/list.phtml
@@ -1,4 +1,4 @@
-<h2><?=\ATP\Inflector::pluralize(\ATP\Inflector::titleize($model))?></h2>
+<h2><?=$modelData['category']?> &gt; <?=\ATP\Inflector::pluralize($modelData['displayName'])?></h2>
 
 <?=$this->partial('atp-admin/shared/model_list.phtml', array('objects' => $objects, 'model' => $model, 'modelData' => $modelData, 'delete' => true))?>
 
@@ -6,7 +6,7 @@
 	<p>
 		<span class="ui-icon ui-icon-alert" style="float: left; margin: 0 7px 6em 0;"></span>
 		<b id="deleted-model-name">Item Name</b><br/><br/>
-		This <?=$model?> will be permanently deleted and cannot be recovered.<br/><br/>
-		<em>Are you sure you want to delete this <?=$model?>?</em>
+		This <?=$modelData['displayName']?> will be permanently deleted and cannot be recovered.<br/><br/>
+		<em>Are you sure you want to delete this <?=$modelData['displayName']?>?</em>
 	</p>
 </div>
