--- a/view/atp-admin/shared/admin_menu.phtml
+++ b/view/atp-admin/shared/admin_menu.phtml
@@ -1,7 +1,7 @@
 <div id="admin-header">
 	<div id="main-header">
-		<h1><a href="<?=$this->basePath() . "/admin"?>"><?=$this->siteParam('Admin Title')?></a></h1>
-		<a id="logout-link" href="<?=$this->basePath() . "/admin/logout"?>">Logout</a>
+		<h1><a href="<?=$this->url('admin')?>"><?=$this->siteParam('Admin Title')?></a></h1>
+		<a id="logout-link" href="<?=$this->url('admin', array('action' => 'logout'))?>">Logout</a>
 		<span id="id-span">Hi {{adminUser:}}!</span>
 	</div>
 	<ul id="admin-menu">
@@ -11,7 +11,7 @@
 				<ul>
 					<?php foreach($menuItems as $item) { ?>
 						<li>
-							<a href="<?=$this->basePath() . $item['link'] ?>">
+							<a href="<?=$this->url('admin', $item['linkData'])?>">
 								<?=$item['label']?>
 							</a>
 						</li>
