--- a/view/atp-admin/index/edit.phtml
+++ b/view/atp-admin/index/edit.phtml
@@ -45,7 +45,7 @@
 					<?php $helper = "form{$columnData['type']}"?>
 					<?=$this->$helper(array('label' => $columnData['label'], 'name' => "modelData[{$column}]", 'value' => $object->$column))?>
 					<?php if($object->isAFile($column) && !empty($object->$column->name)) { ?>
-						<a class="file-link" href="<?=$this->url($object->filePath($column))?>" target="blank">View File</a>
+						<a class="file-link" href="<?=$this->basePath($object->filePath($column))?>" target="blank">View File</a>
 					<?php } ?>
 				<?php } ?>
 				
