Fix model name on admin edit page save button

--- a/view/atp-admin/index/edit.phtml
+++ b/view/atp-admin/index/edit.phtml
@@ -49,7 +49,7 @@
 					<?php } ?>
 				<?php } ?>
 				
-				<input type="submit" class="model-save" name="submit" value="Save <?=\ATP\Inflector::titleize($model)?>" />
+				<input type="submit" class="model-save" name="submit" value="Save <?=$modelData['displayName']?>" />
 			</form>
 		</div>
 	</div>
